--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="searchString">Search Contact</string>
     <string name="notes_hint">Write the notes for this contact here</string>
     <string name="save_button">Save</string>
+    <string name="title_activity_call_screen">CallScreenActivity</string>
 
 </resources>
