ALL IZZ WELL ---> so call comes and the toast is shown but toast goes off after some time and need to dump the data to my server

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="notes_hint">Write the notes for this contact here</string>
     <string name="save_button">Save</string>
     <string name="title_activity_call_screen">CallScreenActivity</string>
+    <string name="title_activity_front_screen">FrontScreenActivity</string>
 
 </resources>
